--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 </head>
 <body>
     
+    <a class="scroll-top" href="#nav">
+        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+    </a>
+
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar" id="nav">
         <div class="container">
             <a href="" class="logo">
                 <span class="promise">P</span>
@@ -30,19 +34,19 @@
             <div class="navbar-inner">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="" class="nav-link">About me</a>
+                        <a href="index.html" class="nav-link">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Resume</a>
+                        <a href="resume.html" class="nav-link">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Portfolio</a>
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Blog</a>
+                        <a href="blog.html" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
