Added Page Load Animation

--- a/blog.html
+++ b/blog.html
@@ -4,22 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/linecons.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="css/blog.css">
 </head>
 </head>
 <body>
-   
-    <div class="page-loader">
-        <div class="page-loader-inner">
-            <div class="circle"></div>
-        </div>
-    </div>
 
     <a class="scroll-top" href="#nav">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -68,59 +62,13 @@
     <section class="page-title">
         <div class="container">
             <div class="row align-items-center">
-                <h1>Portfolio</h1>
+                <h1>Blog</h1>
             </div>
         </div>
     </section>
 
     <!-- page-title  -->
      
-
-    <!-- Portfolio-container -->
-    <section class="porfolio">
-        <div class="container">
-            <div class="row">
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/tinkle/desktop_contacts_1.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/kills_burger/kills_landing.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/python_course/python_landing.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/quiz_pedia/home_screen.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/trans/home_screen.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-                <div class="portfolio-item">
-                    <span class="project-name">Tinkle</span>
-                    <img src="./img/projects/japanator/japanator.png" alt="">
-                    <div class="project-type"></div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- Portfolio-container -->
-
 
     <!-- Footer Start -->
 
