--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,12 @@
 </head>
 <body>
 
+    <div class="page-loader">
+        <div class="page-loader-inner">
+            <div class="circle"></div>
+        </div>
+    </div>
+
     <a class="scroll-top" href="#nav">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
     </a>
