--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,12 @@
 </head>
 </head>
 <body>
+    
+    <div class="page-loader">
+        <div class="page-loader-inner">
+            <div class="circle"></div>
+        </div>
+    </div>
 
     <a class="scroll-top" href="#nav">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -61,6 +67,7 @@
 
     <section class="page-title">
         <div class="container">
+            <p class="contact-subtitle">Get In Touch</p>
             <div class="row align-items-center">
                 <h1>Contact</h1>
             </div>
