--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
     
+    <div class="page-loader">
+        <div class="page-loader-inner">
+            <div class="circle"></div>
+        </div>
+    </div>
+    
     <a class="scroll-top" href="#nav">
         <i class="fa fa-chevron-up" aria-hidden="true"></i>
     </a>
@@ -73,7 +79,7 @@
                             <h1>Promise Sheggsmann</h1>
                             <p>
                                 Hi I'm  Promise, a highly motivated and well-qualified full-stack developer.
-                                My biggest priority as a developer is to deliver 100% client satisfaction on every project awarded to me.
+                                My biggest priority as a developer is to deliver 100% satisfaction on every project awarded to me.
                                 I am well versed in high-end communication skills, good business practices, and self-motivated principles that guarantee success.
                             </p>
                             <div class="home-buttons">
