--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="page-loader">
         <div class="page-loader-inner">
-            <div class="circle"></div>
+            <div class="spinner"></div>
         </div>
     </div>
     
@@ -68,14 +68,14 @@
                 <div class="col-4">
                     <div class="home-img">
                         <div class="home-img-inner">
-                            <img src="./img/cesar-rincon-1024x1024.jpg" alt="">
+                            <img src="./img/sheggs.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="home-text">
                         <div class="home-text-inner">
-                            <span>Full-Stack Developer</span>
+                            <span class="ml12">Full-Stack Developer</span>
                             <h1>Promise Sheggsmann</h1>
                             <p>
                                 Hi I'm  Promise, a highly motivated and well-qualified full-stack developer.
@@ -337,7 +337,7 @@
 
     <!-- Footer End -->
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
     <script src="/js/main.js"></script>
