--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 
     <div class="page-loader">
         <div class="page-loader-inner">
-            <div class="circle"></div>
+            <div class="spinner"></div>
         </div>
     </div>
 
