Added padding to navbar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Promise Sheggsmann is a highly motivated and well-qualified Full-Stack Develeoper, highly skilled at web and software development.">
+    <meta name="keywords" content="Full-Stack Developer, Web Developer, Python Developer, 
+    JavaScript Developer, Mobile Developer, Developer, Nigeria Developers, Website Developer
+    React Native Developer, Freelancer, Nigeria Freelancers">
     <title>Promise Sheggsmann</title>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -68,7 +72,7 @@
                 <div class="col-4">
                     <div class="home-img">
                         <div class="home-img-inner">
-                            <img src="./img/sheggs.png" alt="">
+                            <img src="./img/sheggs.png" alt="Promise Sheggsmann">
                         </div>
                     </div>
                 </div>
