--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,6 @@
     <!-- Navbar -->
 
 
-
-
-
     <!-- page-title -->
 
     <section class="page-title">
@@ -80,7 +77,70 @@
     <!-- page-title  -->
 
 
+    <!-- Portfolio Popup -->
+
+    <div class="pp-popup">
+        <div class="pp-overlay"></div>
+        <div class="pp-inner">
+            <div class="pp-wrapper">
+                <div class="pp-header">
+                    <button class="prev-pp-btn"><i class="btn-icon" data-feather="chevron-left"></i></button>
+                    <button class="next-pp-btn"><i class="btn-icon" data-feather="chevron-right"></i></button>
+                    <button class="close-pp-btn"><i class="btn-icon" data-feather="x"></i></button>
+                </div>
     
+                <div class="pp-content">
+                    <h1 class="pp-title">Tinkle</h1>
+                    <div class="pp-body">
+                        <div class="pp-left">
+                            <div class="pp-thumbnail">
+                                <img src="./img/projects/project_1.png" alt="">
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio corporis 
+                                autem quidem dolor facilis, molestiae ipsa fugit facere atque fuga!
+                            </p>
+                            <div class="pp-thumbnail">
+                                <img src="./img/projects/project_2.png" alt="">
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            </p>
+                        </div>
+
+                        <div class="pp-right"> 
+                            <div class="pp-description-box">
+                                <div class="pp-desc-inner">
+                                    <h2>Description</h2>
+                                    <p><i class="fa fa-user"></i> <span>Promise Sheggsmann</span></p>
+                                    <p>
+                                        <a href="#"><i class="fa fa-link"></i> <span>Mobile App</span></a>
+                                    </p>
+                                    <p><i class="fa fa-calendar"></i> <span>3/08/2021</span></p>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quaerat, quibusdam
+                                        error magni ipsa excepturi beatae ullam nam minima eum voluptas, eveniet minus nemo unde 
+                                        vitae! Repellat consequatur at architecto quae omnis autem repudiandae quia.
+                                    </p>
+                                    <h2 class="tech-stack-title">Technology Stack</h2>
+                                    <ul class="tech-stack-list">
+                                        <li>Python</li>
+                                        <li>JavaScript</li>
+                                        <li>Node JS</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Portfolio Popup -->
+
 
     <!-- Portfolio-container -->
     <section class="porfolio">
@@ -109,7 +169,11 @@
                         </p>
                     </div>
                     <div class="portfolio-description">
-                        
+                        <div class="images">
+                            <img src="./img/projects/project_3.1.png" alt="">
+                            <img src="./img/projects/project_3.2.png" alt="">
+                            <img src="./img/projects/project_3.3.png" alt="">
+                        </div>
                     </div>
                     <footer>
                         <ul class="tech-stack">
@@ -302,7 +366,7 @@
                         <h2 class="p-title">Japanator</h2>
                         <p class="p-description">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, 
-                            something more
+                            something more to doing something else than the thing we do now.
                         </p>
                     </div>
                     <div class="portfolio-description">
@@ -422,11 +486,11 @@
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/main.js"></script>
     <script src="/js/portfolio.js"></script>
     <script>
         feather.replace()
     </script>
+    <script src="/js/main.js"></script>
 
 
 </body>
