--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Promise Sheggsmann is a highly motivated and well-qualified Full-Stack Develeoper, highly skilled at web and software development.">
-    <meta name="keywords" content="Full-Stack Developer, Web Developer, Python Developer, 
+    <meta name="keywords" content="Promise, Promise Sheggsmann, Sheggsmann, Full-Stack Developer, Web Developer, Python Developer, 
     JavaScript Developer, Mobile Developer, Developer, Nigeria Developers, Website Developer
     React Native Developer, Freelancer, Nigeria Freelancers">
     <title>Promise Sheggsmann</title>
