--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="home-text-inner">
                             <span class="ml12">Full-Stack Developer</span>
                             <h1>Promise Sheggsmann</h1>
-                            <p>
+                            <p class="home-text-about">
                                 Hi I'm  Promise, a highly motivated and well-qualified full-stack developer.
                                 My biggest priority as a developer is to deliver 100% satisfaction on every project awarded to me.
                                 I am well versed in high-end communication skills, good business practices, and self-motivated principles that guarantee success.
