--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,6 @@
                         <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="blog.html" class="nav-link">Blog</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
@@ -166,7 +163,7 @@
                 <div class="socials">
                     <ul>
                         <li class="social-item">
-                            <a href="#" class="social-link">Github</a>
+                            <a href="https://github.com/Sheggsmann" target="_blank" class="social-link">Github</a>
                         </li>
                         <li class="social-item">
                             <a href="#" class="social-link">Facebook</a>
