--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                         <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="blog.html" class="nav-link">Blog</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
@@ -87,8 +84,8 @@
                                 I am well versed in high-end communication skills, good business practices, and self-motivated principles that guarantee success.
                             </p>
                             <div class="home-buttons">
-                                <a href="#" class="btn btn-1">Download CV</a>
-                                <a href="#" class="btn btn-2">Hire Me</a>
+                                <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
+                                <a href="/contact.html" class="btn btn-2">Hire Me</a>
                             </div>
                         </div>
                     </div>
@@ -253,20 +250,6 @@
     <!-- Testimonials Section End -->
 
 
-    <!-- Technologies -->
-    <section class="technologies section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="section-title">
-                    <h2>Technologies</h2>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- Technologies -->
-
-
     <!-- Fun Facts -->
     <section class="fun-facts section-padding">
         <div class="container">
@@ -316,7 +299,7 @@
                 <div class="socials">
                     <ul>
                         <li class="social-item">
-                            <a href="#" class="social-link">Github</a>
+                            <a href="https://github.com/Sheggsmann" target="_blank" class="social-link">Github</a>
                         </li>
                         <li class="social-item">
                             <a href="#" class="social-link">Facebook</a>
