--- a/portfolio.html
+++ b/portfolio.html
@@ -89,21 +89,7 @@
                 <div class="pp-content">
                     <h1 class="pp-title">Tinkle</h1>
                     <div class="pp-body">
-                        <div class="pp-left">
-                            <!-- <div class="pp-thumbnail">
-                                <img src="./img/projects/project_1.png" alt="">
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio corporis 
-                                autem quidem dolor facilis, molestiae ipsa fugit facere atque fuga!
-                            </p>
-                            <div class="pp-thumbnail">
-                                <img src="./img/projects/project_2.png" alt="">
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            </p> -->
-                        </div>
+                        <div class="pp-left"></div>
 
                         <div class="pp-right"> 
                             <div class="pp-description-box">
