--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
                             <div class="contact-text">
                                 <a href="tel:+234 8088866150" class="contact-header">808-886-6150</a>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit 
-                                    officiis quos sequi tenetur corporis.
+                                    If you have a need to discuss personally with me via 
+                                    a phone call, you can easily click on the number.
                                 </p>
                             </div>
                         </div>
@@ -97,8 +97,8 @@
                             <div class="contact-text">
                                 <a href="" class="contact-header">Ibadan, Nigeria</a>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit 
-                                    officiis quos sequi tenetur corporis.
+                                    That's my current location. I stay here for studies and for other 
+                                    activities.
                                 </p>
                             </div>
                         </div>
@@ -108,8 +108,7 @@
                             <div class="contact-text">
                                 <a href="mailto:promisesheggs@gmail.com" class="contact-header">Promisesheggs@gmail.com</a>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit 
-                                    officiis quos sequi tenetur corporis.
+                                    If you want to contact me via email, you can easily click the email address above.
                                 </p>
                             </div>
                         </div>
@@ -166,13 +165,13 @@
                             <a href="https://github.com/Sheggsmann" target="_blank" class="social-link">Github</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">Facebook</a>
+                            <a href="https://web.facebook.com/promise.uchegbunam.7/" target="_blank" class="social-link">Facebook</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/promise-sheggs-09b733212/" target="_blank" class="social-link">LinkedIn</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">WhatsApp</a>
+                            <a href="https://wa.me/+2348088866150" target="_blank" class="social-link">WhatsApp</a>
                         </li>
                     </ul>
                 </div>
