--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Promise Sheggsmann is a highly motivated and well-qualified Full-Stack Develeoper, highly skilled at web and software development.">
+    <meta name="description" content="Promise Sheggsmann is a prolific and well-qualified Full-Stack Develeoper, highly skilled at web and software development.">
     <meta name="keywords" content="Promise, Promise Sheggsmann, Sheggsmann, Full-Stack Developer, Web Developer, Python Developer, 
     JavaScript Developer, Mobile Developer, Developer, Nigeria Developers, Website Developer
     React Native Developer, Freelancer, Nigeria Freelancers">
@@ -76,12 +76,13 @@
                 <div class="col-6">
                     <div class="home-text">
                         <div class="home-text-inner">
-                            <span class="ml12">Full-Stack Developer</span>
+                            <span class="ml12">Full-Stack Software Engineer</span>
                             <h1>Promise Sheggsmann</h1>
                             <p class="home-text-about">
-                                Hi I'm  Promise, a highly motivated and well-qualified full-stack developer.
-                                My biggest priority as a developer is to deliver 100% satisfaction on every project awarded to me.
-                                I am well versed in high-end communication skills, good business practices, and self-motivated principles that guarantee success.
+                                Hi I'm Promise, a profilic and self-motivated Software Engineer based in Nigeria.
+                                I have a passion for metrics and I love to develop highly optimized and scalable solutions using modern technologies. 
+                                My biggest priority everyday is to be better than I was the previous day, then use this drive
+                                to tackle more problems and endorse technolgies into every business and area it is applicable.
                             </p>
                             <div class="home-buttons">
                                 <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
@@ -115,9 +116,8 @@
                             <div class="what-i-do-text">
                                 <h3>Website Development</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nesciunt rem eaque et, 
-                                    facilis ut reiciendis maiores, repellat molestiae aliquam repellendus tempora 
-                                    perferendis at. Neque!
+                                    I develop highly optimized, scalable and elegant websites using modern technologies, which
+                                    means, your websites would definitley stand out from the crowd.
                                 </p>
                             </div>
                         </div>
@@ -131,9 +131,8 @@
                             <div class="what-i-do-text">
                                 <h3>Mobile Development</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nesciunt rem eaque et, 
-                                    facilis ut reiciendis maiores, repellat molestiae aliquam repellendus tempora 
-                                    perferendis at. Neque!
+                                    In need of a cross-platform mobile app (Android/IOS) for your startup, business or an idea, I have just
+                                    the right skills to move your project from concept to reality.
                                 </p>
                             </div>
                         </div>
@@ -150,9 +149,8 @@
                             <div class="what-i-do-text">
                                 <h3>Ecommerce</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nesciunt rem eaque et, 
-                                    facilis ut reiciendis maiores, repellat molestiae aliquam repellendus tempora 
-                                    perferendis at. Neque!
+                                    Are you considering expanding your store business and stretching it's limits? an e-commerce website is exactly what you 
+                                    need and you've got the right person to deliver one.
                                 </p>
                             </div>
                         </div>
@@ -166,9 +164,9 @@
                             <div class="what-i-do-text">
                                 <h3>Automation & Scripting</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nesciunt rem eaque et, 
-                                    facilis ut reiciendis maiores, repellat molestiae aliquam repellendus tempora 
-                                    perferendis at. Neque!
+                                    Yeah, you read it right. Probably you have a very boring or lengthy job that has
+                                    to be done with a computer and you don't have the time for that, you can try automating
+                                    the process by hiring me.
                                 </p>
                             </div>
                         </div>
@@ -197,8 +195,11 @@
                       <img src="./img/testimonial/1.jpg" alt="">
                   </div>
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto!
+                      Sheggs is a very excellent and professional programmer.
+                      He delivered my project, met all my expectations, and even made
+                    personal contributions to my project.
+                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
+                      ducimus incidunt totam dolorum, nulla iusto! -->
                   </p>
                   <h3>Matsuda Tomo</h3>
                   <span>Upwork</span>
@@ -210,8 +211,10 @@
                       <img src="./img/testimonial/2.jpg" alt="">
                   </div>
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto!
+                      I didn't know exactly what I wanted, but this developer kinda read my mind.
+                      I loved his work, his spirit and ..., I would definitely work with him again.
+                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
+                      ducimus incidunt totam dolorum, nulla iusto! -->
                   </p>
                   <h3>Devneel Vaidya</h3>
                   <span>Upwork</span>
@@ -223,8 +226,10 @@
                       <img src="./img/testimonial/3.jpg" alt="">
                   </div>
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto!
+                      I never knew the hidden potentials of my business until I got an e-commerce website
+                      up and running from him. I simply recommend him to anyone
+                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
+                      ducimus incidunt totam dolorum, nulla iusto! -->
                   </p>
                   <h3>Stacy UK</h3>
                   <span>Fashion Model</span>
@@ -236,8 +241,10 @@
                       <img src="./img/testimonial/4.jpg" alt="">
                   </div>
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto!
+                      Being his coach and later his employer, Promise is very skilled and equipped with a very
+                      nice personality. You would definitely love to work with him.
+                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
+                      ducimus incidunt totam dolorum, nulla iusto! -->
                   </p>
                   <h3>Brother Sam.</h3>
                   <span>MBJ</span>
@@ -302,13 +309,13 @@
                             <a href="https://github.com/Sheggsmann" target="_blank" class="social-link">Github</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">Facebook</a>
+                            <a href="https://web.facebook.com/promise.uchegbunam.7/" target="_blank" class="social-link">Facebook</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/promise-sheggs-09b733212/" target="_blank" class="social-link">LinkedIn</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">WhatsApp</a>
+                            <a href="https://wa.me/+2348088866150" target="_blank" class="social-link">WhatsApp</a>
                         </li>
                     </ul>
                 </div>
