--- a/resume.html
+++ b/resume.html
@@ -90,18 +90,17 @@
                             <p class="place">Lead City University</p>
                             <h3>Software Engineering</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem 
-                                placeat veniam ullam inventore laudantium, iusto unde corporis velit?
+                                Relevant Courses: Data Structures and Algorithms, Compilers, Principles of Programming, Logic and Database Theory, Systems Engineering, Computer Systems
                             </p>
                         </div>
                         
                         <div class="education-item">
                             <span class="year">2021</span>
-                            <p class="place">Tom's Bootcamp</p>
+                            <p class="place">FreeCodeCamp</p>
                             <h3>Full-stack development</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem 
-                                placeat veniam ullam inventore laudantium, iusto unde corporis velit?
+                                Regular attendee of the freecodecamp free software development track
+                                and on my way to completing all the skillsets.
                             </p>
                         </div>
 
@@ -122,18 +121,18 @@
                                 <p class="place">Marist Brother's Juniorate</p>
                                 <h3>Software Developer</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit suscipit 
-                                    saepe porro ipsum expedita esse aliquid maxime asperiores.
+                                    Designed and developed various educational applications which improved overall student's
+                                    performance by 44%. The most effective academic investment the school had made in a long run.
                                 </p>
                             </div>
                             
                             <div class="experience-item">
-                                <span class="year">2019 - 2021</span>
+                                <span class="year">2020 - 2021</span>
                                 <p class="place">Lead City University</p>
-                                <h3>Associate Front-end Developer</h3>
+                                <h3>Software Engineer</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit suscipit 
-                                    saepe porro ipsum expedita esse aliquid maxime asperiores.
+                                    Lead a team of 4 developers to design and develop
+                                    a highly scalable photo-sharing platform for data research.
                                 </p>
                             </div>
 
@@ -239,13 +238,13 @@
                             <a href="https://github.com/Sheggsmann" target="_blank" class="social-link">Github</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">Facebook</a>
+                            <a href="https://web.facebook.com/promise.uchegbunam.7/" target="_blank" class="social-link">Facebook</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/promise-sheggs-09b733212/" target="_blank" class="social-link">LinkedIn</a>
                         </li>
                         <li class="social-item">
-                            <a href="#" class="social-link">WhatsApp</a>
+                            <a href="https://wa.me/+2348088866150" target="_blank" class="social-link">WhatsApp</a>
                         </li>
                     </ul>
                 </div>
